see more bread revisi

--- a/html/classic.html
+++ b/html/classic.html
@@ -86,134 +86,116 @@
     <!-- MAIN -->
     <main>
       <div class="breads">
-        <a href="bread1.html" class="bread">
+        <div class="bread">
           <img src="../src/bread/bread1-banana-bread.jpg" alt="Bread 1" />
           <div class="bread-info">
             <h3>Roti 1</h3>
             <p>Rp 20.000,00</p>
           </div>
           <div class="bread-seemore">
-            <p class="seemore-text">See more</p>
-            <p class="seemore-arrow">>></p>
+            <p class="seemore-text">See<br>more</p>
           </div>
-        </a>
+        </div>
 
-        <a href="bread2.html" class="bread">
+        <div class="bread">
           <img src="../src/bread/bread2-baguette.jpg" alt="Bread 2" />
           <div class="bread-info">
             <h3>Roti 2</h3>
             <p>Rp 20.000,00</p>
           </div>
           <div class="bread-seemore">
-            <p class="seemore-text">See more</p>
-            <p class="seemore-arrow">>></p>
+            <p class="seemore-text">See<br>more</p>
           </div>
-        </a>
+        </div>
 
-        <a href="bread3.html" class="bread">
+        <div class="bread">
           <img src="../src/bread/bread3-challah.jpg" alt="Bread 3" />
           <div class="bread-info">
             <h3>Roti 3</h3>
             <p>Rp 20.000,00</p>
           </div>
           <div class="bread-seemore">
-            <p class="seemore-text">See more</p>
-            <p class="seemore-arrow">>></p>
+            <p class="seemore-text">See<br>more</p>
           </div>
-        </a>
+        </div>
 
-        <a href="bread4.html" class="bread">
+        <div class="bread">
           <img src="../src/bread/bread4-ciabatta.jpg" alt="Bread 4" />
           <div class="bread-info">
             <h3>Roti 4</h3>
             <p>Rp 20.000,00</p>
           </div>
           <div class="bread-seemore">
-            <p class="seemore-text">See more</p>
-            <p class="seemore-arrow">>></p>
+            <p class="seemore-text">See<br>more</p>
           </div>
-        </a>
+        </div>
 
-        <a href="bread5.html" class="bread">
+        <div class="bread">
           <img src="../src/bread/bread5-soda-bread.jpg" alt="Bread 5" />
           <div class="bread-info">
             <h3>Roti 5</h3>
             <p>Rp 20.000,00</p>
           </div>
           <div class="bread-seemore">
-            <p class="seemore-text">See more</p>
-            <p class="seemore-arrow">>></p>
+            <p class="seemore-text">See<br>more</p>
           </div>
-        </a>
+        </div>
 
-        <a href="bread6.html" class="bread">
+        <div class="bread">
           <img src="../src/bread/bread6-focaccia.jpg" alt="Bread 6" />
           <div class="bread-info">
             <h3>Roti 6</h3>
             <p>Rp 20.000,00</p>
           </div>
           <div class="bread-seemore">
-            <p class="seemore-text">See more</p>
-            <p class="seemore-arrow">>></p>
+            <p class="seemore-text">See<br>more</p>
           </div>
-        </a>
+        </div>
 
-        <a href="bread7.html" class="bread">
+        <div class="bread">
           <img src="../src/bread/bread7-multigrain-bread.jpg" alt="Bread 7" />
           <div class="bread-info">
             <h3>Roti 7</h3>
             <p>Rp 20.000,00</p>
           </div>
           <div class="bread-seemore">
-            <p class="seemore-text">See more</p>
-            <p class="seemore-arrow">>></p>
+            <p class="seemore-text">See<br>more</p>
           </div>
-        </a>
+        </div>
 
-        <a href="bread8.html" class="bread">
+        <div class="bread">
           <img src="../src/bread/bread8-pumpernickel.jpg" alt="Bread 8" />
           <div class="bread-info">
             <h3>Roti 8</h3>
             <p>Rp 20.000,00</p>
           </div>
           <div class="bread-seemore">
-            <p class="seemore-text">See more</p>
-            <p class="seemore-arrow">>></p>
+            <p class="seemore-text">See<br>more</p>
           </div>
-        </a>
+        </div>
 
-        <a href="bread9.html" class="bread">
+        <div class="bread">
           <img src="../src/bread/bread9-rye-bread.jpg" alt="Bread 9" />
           <div class="bread-info">
             <h3>Roti 9</h3>
             <p>Rp 20.000,00</p>
           </div>
           <div class="bread-seemore">
-            <p class="seemore-text">See more</p>
-            <p class="seemore-arrow">>></p>
+            <p class="seemore-text">See<br>more</p>
           </div>
-        </a>
+        </div>
 
-        <a href="bread10.html" class="bread">
+        <div class="bread">
           <img src="../src/bread/bread10-sourdough.jpg" alt="Bread 10" />
           <div class="bread-info">
             <h3>Roti 10</h3>
             <p>Rp 20.000,00</p>
           </div>
           <div class="bread-seemore">
-            <p class="seemore-text">See more</p>
-            <p class="seemore-arrow">>></p>
+            <p class="seemore-text">See<br>more</p>
           </div>
-        </a>
+        </div>
 
-        <a href="classic.html" class="bread bread-more">
-          <div class="dots">
-            <span class="dot dot-active"></span>
-            <span class="dot dot-active"></span>
-            <span class="dot dot-active"></span>
-          </div>
-          <h3>More</h3>
-        </a>
       </div>
     </main>
 
