--- a/html/home.html
+++ b/html/home.html
@@ -127,50 +127,47 @@
         <h2>Our New Breads</h2>
 
         <div class="breads">
-          <a href="bread1.html" class="bread">
+          <div class="bread">
             <img src="../src/bread/bread1-banana-bread.jpg" alt="Bread 1" />
             <div class="bread-info">
               <h3>Roti 1</h3>
               <p>Rp 20.000,00</p>
             </div>
             <div class="bread-seemore">
-              <p class="seemore-text">See more</p>
-              <p class="seemore-arrow">>></p>
+              <p class="seemore-text">See<br>more</p>
             </div>
-          </a>
+          </div>
   
-          <a href="bread2.html" class="bread">
+          <div class="bread">
             <img src="../src/bread/bread2-baguette.jpg" alt="Bread 2" />
             <div class="bread-info">
               <h3>Roti 2</h3>
               <p>Rp 20.000,00</p>
             </div>
             <div class="bread-seemore">
-              <p class="seemore-text">See more</p>
-              <p class="seemore-arrow">>></p>
+              <p class="seemore-text">See<br>more</p>
             </div>
-          </a>
+          </div>
   
-          <a href="bread3.html" class="bread">
+          <div class="bread">
             <img src="../src/bread/bread3-challah.jpg" alt="Bread 3" />
             <div class="bread-info">
               <h3>Roti 3</h3>
               <p>Rp 20.000,00</p>
             </div>
             <div class="bread-seemore">
-              <p class="seemore-text">See more</p>
-              <p class="seemore-arrow">>></p>
+              <p class="seemore-text">See<br>more</p>
             </div>
-          </a>
+          </div>
   
-          <a href="classic.html" class="bread bread-more">
+          <div class="bread" id="bread-more">
             <div class="dots">
               <span class="dot dot-active"></span>
               <span class="dot dot-active"></span>
               <span class="dot dot-active"></span>
             </div>
             <h3>More</h3>
-          </a>
+          </div>
         </div>
         
       </section>
