change assets naming

--- a/html/classic.html
+++ b/html/classic.html
@@ -20,12 +20,12 @@
     <nav>
       <div class="navbar-title">
         <img
-          src="../src/hamburger-menu-icon.png"
+          src="../src/icons/hamburger-menu-icon.png"
           alt="Menu"
           id="hamburger-menu"
         />
         <div class="nav-item logo-title">
-          <img src="../src/logo-banner.png" alt="Logo" id="logo-banner" />
+          <img src="../src/logo/logo-banner.png" alt="Logo" id="logo-banner" />
         </div>
       </div>
 
@@ -33,7 +33,7 @@
         <hr />
         <a href="home.html">
           <div class="nav-item" id="nav-home">
-            <img src="../src/home-icon.png" alt="Home" />
+            <img src="../src/icons/home-icon.png" alt="Home" />
             <p>Home</p>
           </div>
         </a>
@@ -47,7 +47,7 @@
             <hr />
             <a href="#">
               <div class="nav-item" id="nav-classic">
-                <img src="../src/classic-icon.png" alt="Classic" />
+                <img src="../src/icons/classic-icon.png" alt="Classic" />
                 <p>Classic Bread</p>
               </div>
             </a>
@@ -55,7 +55,7 @@
             <hr />
             <a href="custom.html">
               <div class="nav-item" id="nav-custom">
-                <img src="../src/custom-icon.png" alt="Custom" />
+                <img src="../src/icons/custom-icon.png" alt="Custom" />
                 <p>Custom Cake</p>
               </div>
             </a>
@@ -65,7 +65,7 @@
         <hr />
         <a href="checkout.html">
           <div class="nav-item hoverable" id="nav-checkout">
-            <img src="../src/checkout-icon.png" alt="Checkout" />
+            <img src="../src/icons/checkout-icon.png" alt="Checkout" />
             <p>Checkout</p>
           </div>
         </a>
@@ -87,7 +87,7 @@
     <main>
       <div class="breads">
         <div class="bread">
-          <img src="../src/bread/bread1-banana-bread.jpg" alt="Bread 1" />
+          <img src="../src/breads/bread1.jpg" alt="Bread 1" />
           <div class="bread-info">
             <h3>Roti 1</h3>
             <p>Rp 20.000,00</p>
@@ -98,7 +98,7 @@
         </div>
 
         <div class="bread">
-          <img src="../src/bread/bread2-baguette.jpg" alt="Bread 2" />
+          <img src="../src/breads/bread2.jpg" alt="Bread 2" />
           <div class="bread-info">
             <h3>Roti 2</h3>
             <p>Rp 20.000,00</p>
@@ -109,7 +109,7 @@
         </div>
 
         <div class="bread">
-          <img src="../src/bread/bread3-challah.jpg" alt="Bread 3" />
+          <img src="../src/breads/bread3.jpg" alt="Bread 3" />
           <div class="bread-info">
             <h3>Roti 3</h3>
             <p>Rp 20.000,00</p>
@@ -120,7 +120,7 @@
         </div>
 
         <div class="bread">
-          <img src="../src/bread/bread4-ciabatta.jpg" alt="Bread 4" />
+          <img src="../src/breads/bread4.jpg" alt="Bread 4" />
           <div class="bread-info">
             <h3>Roti 4</h3>
             <p>Rp 20.000,00</p>
@@ -131,7 +131,7 @@
         </div>
 
         <div class="bread">
-          <img src="../src/bread/bread5-soda-bread.jpg" alt="Bread 5" />
+          <img src="../src/breads/bread5.jpg" alt="Bread 5" />
           <div class="bread-info">
             <h3>Roti 5</h3>
             <p>Rp 20.000,00</p>
@@ -142,7 +142,7 @@
         </div>
 
         <div class="bread">
-          <img src="../src/bread/bread6-focaccia.jpg" alt="Bread 6" />
+          <img src="../src/breads/bread6.jpg" alt="Bread 6" />
           <div class="bread-info">
             <h3>Roti 6</h3>
             <p>Rp 20.000,00</p>
@@ -153,7 +153,7 @@
         </div>
 
         <div class="bread">
-          <img src="../src/bread/bread7-multigrain-bread.jpg" alt="Bread 7" />
+          <img src="../src/breads/bread7.jpg" alt="Bread 7" />
           <div class="bread-info">
             <h3>Roti 7</h3>
             <p>Rp 20.000,00</p>
@@ -164,7 +164,7 @@
         </div>
 
         <div class="bread">
-          <img src="../src/bread/bread8-pumpernickel.jpg" alt="Bread 8" />
+          <img src="../src/breads/bread8.jpg" alt="Bread 8" />
           <div class="bread-info">
             <h3>Roti 8</h3>
             <p>Rp 20.000,00</p>
@@ -175,7 +175,7 @@
         </div>
 
         <div class="bread">
-          <img src="../src/bread/bread9-rye-bread.jpg" alt="Bread 9" />
+          <img src="../src/breads/bread9.jpg" alt="Bread 9" />
           <div class="bread-info">
             <h3>Roti 9</h3>
             <p>Rp 20.000,00</p>
@@ -186,7 +186,7 @@
         </div>
 
         <div class="bread">
-          <img src="../src/bread/bread10-sourdough.jpg" alt="Bread 10" />
+          <img src="../src/breads/bread10.jpg" alt="Bread 10" />
           <div class="bread-info">
             <h3>Roti 10</h3>
             <p>Rp 20.000,00</p>
@@ -204,13 +204,13 @@
       <p>&copy; 2021 Bakersa</p>
       <div class="socmed">
         <a href="https://www.instagram.com/"
-          ><img src="../src/instagram.png" alt="Instagram"
+          ><img src="../src/icons/instagram.png" alt="Instagram"
         /></a>
         <a href="https://facebook.com"
-          ><img src="../src/facebook.png" alt="Facebook"
+          ><img src="../src/icons/facebook.png" alt="Facebook"
         /></a>
         <a href="https://twitter.com">
-          <img src="../src/twitter.png" alt="Twitter"
+          <img src="../src/icons/twitter.png" alt="Twitter"
         /></a>
       </div>
     </footer>
