--- a/html/custom.html
+++ b/html/custom.html
@@ -20,12 +20,12 @@
     <nav>
       <div class="navbar-title">
         <img
-          src="../src/hamburger-menu-icon.png"
+          src="../src/icons/hamburger-menu-icon.png"
           alt="Menu"
           id="hamburger-menu"
         />
         <div class="nav-item logo-title">
-          <img src="../src/logo-banner.png" alt="Logo" id="logo-banner" />
+          <img src="../src/logo/logo-banner.png" alt="Logo" id="logo-banner" />
         </div>
       </div>
 
@@ -33,7 +33,7 @@
         <hr />
         <a href="home.html">
           <div class="nav-item" id="nav-home">
-            <img src="../src/home-icon.png" alt="Home" />
+            <img src="../src/icons/home-icon.png" alt="Home" />
             <p>Home</p>
           </div>
         </a>
@@ -47,7 +47,7 @@
             <hr />
             <a href="classic.html">
               <div class="nav-item" id="nav-classic">
-                <img src="../src/classic-icon.png" alt="Classic" />
+                <img src="../src/icons/classic-icon.png" alt="Classic" />
                 <p>Classic Bread</p>
               </div>
             </a>
@@ -55,7 +55,7 @@
             <hr />
             <a href="#">
               <div class="nav-item" id="nav-custom">
-                <img src="../src/custom-icon.png" alt="Custom" />
+                <img src="../src/icons/custom-icon.png" alt="Custom" />
                 <p>Custom Cake</p>
               </div>
             </a>
@@ -65,7 +65,7 @@
         <hr />
         <a href="checkout.html">
           <div class="nav-item hoverable" id="nav-checkout">
-            <img src="../src/checkout-icon.png" alt="Checkout" />
+            <img src="../src/icons/checkout-icon.png" alt="Checkout" />
             <p>Checkout</p>
           </div>
         </a>
@@ -91,22 +91,22 @@
             <!-- class image-slider buat di css -->
             <div class="image-slider">
                 <div class="cake-faded">
-                  <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
-                  <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake-faded" id="left-flavor">
+                  <img src="../src/cakes/plainmarble.png" alt="Plate" class="plain-marble">
+                  <img src="../src/cakes/vanillacake.png" alt="Vanilla Cake" class="cake-faded" id="left-flavor">
                 </div>
-                <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow arrow-left" id="arrow-left-flavor">
+                <img src="../src/icons/arrow-left-outline.png" alt="Arrow Left" class="arrow arrow-left" id="arrow-left-flavor">
                 <!-- class cake-image kurang penting -->
                 <div class="cake-image">
-                  <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
+                  <img src="../src/cakes/plainmarble.png" alt="Plate" class="plain-marble">
                   <!-- class cake buat ilangin gambar, cake-flavor buat select di js, cake-active buat munculin gambar -->
-                  <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake cake-flavor">
-                  <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake cake-flavor">
-                  <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake cake-flavor">
+                  <img src="../src/cakes/strawberrycake.png" alt="Strawberry Cake" class="cake cake-flavor">
+                  <img src="../src/cakes/vanillacake.png" alt="Vanilla Cake" class="cake cake-flavor">
+                  <img src="../src/cakes/chocolatecake.png" alt="Chocolate Cake" class="cake cake-flavor">
                 </div>
-                <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow arrow-right" id="arrow-right-flavor">
+                <img src="../src/icons/arrow-right-outline.png" alt="Arrow Right" class="arrow arrow-right" id="arrow-right-flavor">
                 <div class="cake-faded">
-                  <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
-                  <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake-faded" id="right-flavor">
+                  <img src="../src/cakes/plainmarble.png" alt="Plate" class="plain-marble">
+                  <img src="../src/cakes/vanillacake.png" alt="Vanilla Cake" class="cake-faded" id="right-flavor">
                 </div>
             </div>
             <h3 id="cake-flavor-title">Vanilla</h3>
@@ -118,22 +118,22 @@
           <p id="cream-price">+ Rp 10.000,00</p>
           <div class="image-slider">
               <div class="cake-faded" id="cake-faded-left">
-                <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
-                <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake-faded" id="left-cream">
+                <img src="../src/cakes/plainmarble.png" alt="Plate" class="plain-marble">
+                <img src="../src/cakes/vanillacake.png" alt="Vanilla Cake" class="cake-faded" id="left-cream">
               </div>
-              <img src="../src/arrow-left-outline.png" alt="Arrow Left" class="arrow arrow-left" id="arrow-left-cream">
+              <img src="../src/icons/arrow-left-outline.png" alt="Arrow Left" class="arrow arrow-left" id="arrow-left-cream">
               <div class="cake-image" >
-                <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
-                <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake cake-cream" id="strawberry-cake-cream">
-                <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake cake-cream" id="vanilla-cake-cream">
-                <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake cake-cream" id="chocolate-cake-cream">
-                <img src="../src/cream.png" alt="Cream" class="cream" id="cake-cream">
+                <img src="../src/cakes/plainmarble.png" alt="Plate" class="plain-marble">
+                <img src="../src/cakes/strawberrycake.png" alt="Strawberry Cake" class="cake cake-cream" id="strawberry-cake-cream">
+                <img src="../src/cakes/vanillacake.png" alt="Vanilla Cake" class="cake cake-cream" id="vanilla-cake-cream">
+                <img src="../src/cakes/chocolatecake.png" alt="Chocolate Cake" class="cake cake-cream" id="chocolate-cake-cream">
+                <img src="../src/cakes/cream.png" alt="Cream" class="cream" id="cake-cream">
               </div>
-              <img src="../src/arrow-right-outline.png" alt="Arrow Right" class="arrow arrow-right" id="arrow-right-cream">
+              <img src="../src/icons/arrow-right-outline.png" alt="Arrow Right" class="arrow arrow-right" id="arrow-right-cream">
               <div class="cake-faded" id="cake-faded-right">
-                <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
-                <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake-faded" id="right-cream">
-                <img src="../src/cream.png" alt="Cream" class="cream" id="cake-cream-right">
+                <img src="../src/cakes/plainmarble.png" alt="Plate" class="plain-marble">
+                <img src="../src/cakes/vanillacake.png" alt="Vanilla Cake" class="cake-faded" id="right-cream">
+                <img src="../src/cakes/cream.png" alt="Cream" class="cream" id="cake-cream-right">
               </div>
           </div>
           <button id="add-cream-before">Prev</button>
@@ -146,11 +146,11 @@
         <div class="add-message-container">
           <div class="image-slider">
             <div class="cake-image" >
-              <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
-              <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake cake-message" id="strawberry-cake-message">
-              <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake cake-message" id="vanilla-cake-message">
-              <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake cake-message" id="chocolate-cake-message">
-              <img src="../src/cream.png" alt="Cream" class="cream" id="cake-cream-message">
+              <img src="../src/cakes/plainmarble.png" alt="Plate" class="plain-marble">
+              <img src="../src/cakes/strawberrycake.png" alt="Strawberry Cake" class="cake cake-message" id="strawberry-cake-message">
+              <img src="../src/cakes/vanillacake.png" alt="Vanilla Cake" class="cake cake-message" id="vanilla-cake-message">
+              <img src="../src/cakes/chocolatecake.png" alt="Chocolate Cake" class="cake cake-message" id="chocolate-cake-message">
+              <img src="../src/cakes/cream.png" alt="Cream" class="cream" id="cake-cream-message">
             </div>
           </div>
           <div class="input-message">
@@ -169,11 +169,11 @@
         <h2>Your Cake is Beautiful</h2>
         <div class="image-slider">
             <div class="cake-image" >
-              <img src="../src/plainmarble.png" alt="Plate" class="plain-marble">
-              <img src="../src/strawberrycake.png" alt="Strawberry Cake" class="cake cake-finish" id="strawberry-cake-finish">
-              <img src="../src/vanillacake.png" alt="Vanilla Cake" class="cake cake-finish" id="vanilla-cake-finish">
-              <img src="../src/chocolatecake.png" alt="Chocolate Cake" class="cake cake-finish" id="chocolate-cake-finish">
-              <img src="../src/cream.png" alt="Cream" class="cream" id="cake-cream-finish">
+              <img src="../src/cakes/plainmarble.png" alt="Plate" class="plain-marble">
+              <img src="../src/cakes/strawberrycake.png" alt="Strawberry Cake" class="cake cake-finish" id="strawberry-cake-finish">
+              <img src="../src/cakes/vanillacake.png" alt="Vanilla Cake" class="cake cake-finish" id="vanilla-cake-finish">
+              <img src="../src/cakes/chocolatecake.png" alt="Chocolate Cake" class="cake cake-finish" id="chocolate-cake-finish">
+              <img src="../src/cakes/cream.png" alt="Cream" class="cream" id="cake-cream-finish">
               <div class="cake-message-container">
                 <p id="cake-message"></p>
               </div>
@@ -191,13 +191,13 @@
       <p>&copy; 2021 Bakersa</p>
       <div class="socmed">
         <a href="https://www.instagram.com/"
-          ><img src="../src/instagram.png" alt="Instagram"
+          ><img src="../src/icons/instagram.png" alt="Instagram"
         /></a>
         <a href="https://facebook.com"
-          ><img src="../src/facebook.png" alt="Facebook"
+          ><img src="../src/icons/facebook.png" alt="Facebook"
         /></a>
         <a href="https://twitter.com">
-          <img src="../src/twitter.png" alt="Twitter"
+          <img src="../src/icons/twitter.png" alt="Twitter"
         /></a>
       </div>
     </footer>
