--- a/html/home.html
+++ b/html/home.html
@@ -17,12 +17,12 @@
     <nav>
       <div class="navbar-title">
         <img
-          src="../src/hamburger-menu-icon.png"
+          src="../src/icons/hamburger-menu-icon.png"
           alt="Menu"
           id="hamburger-menu"
         />
         <div class="nav-item logo-title">
-          <img src="../src/logo-banner.png" alt="Logo" id="logo-banner" />
+          <img src="../src/logo/logo-banner.png" alt="Logo" id="logo-banner" />
         </div>
       </div>
 
@@ -30,7 +30,7 @@
         <hr />
         <a href="#">
           <div class="nav-item" id="nav-home">
-            <img src="../src/home-icon.png" alt="Home" />
+            <img src="../src/icons/home-icon.png" alt="Home" />
             <p>Home</p>
           </div>
         </a>
@@ -44,7 +44,7 @@
             <hr />
             <a href="classic.html">
               <div class="nav-item" id="nav-classic">
-                <img src="../src/classic-icon.png" alt="Classic" />
+                <img src="../src/icons/classic-icon.png" alt="Classic" />
                 <p>Classic Bread</p>
               </div>
             </a>
@@ -52,7 +52,7 @@
             <hr />
             <a href="custom.html">
               <div class="nav-item" id="nav-custom">
-                <img src="../src/custom-icon.png" alt="Custom" />
+                <img src="../src/icons/custom-icon.png" alt="Custom" />
                 <p>Custom Cake</p>
               </div>
             </a>
@@ -64,7 +64,7 @@
         <hr />
         <a href="checkout.html">
           <div class="nav-item hoverable" id="nav-checkout">
-            <img src="../src/checkout-icon.png" alt="Checkout" />
+            <img src="../src/icons/checkout-icon.png" alt="Checkout" />
             <p>Checkout</p>
           </div>
         </a>
@@ -77,12 +77,12 @@
     <!-- HEADER -->
     <header>
         <div class="overlay">
-            <img src="../src/logo-light.png" alt="Logo Light" class="logo-light"/>
+            <img src="../src/logo/logo-light.png" alt="Logo Light" class="logo-light"/>
       <h1>Bakersa</h1>
       <h2>~ Est. 2001 ~</h2>
       <h3>Your favourite bakery in town</h3>
       <div class="search-stores">
-        <img src="../src/search-icon.png" alt="Search" />
+        <img src="../src/icons/search-icon.png" alt="Search" />
         <input type="text" placeholder="Search your nearest local stores..." />
       </div>
         </div>
@@ -97,7 +97,7 @@
         <h2>What's New</h2>
         <div class="image-slider">
           <img
-            src="../src/arrow-left-outline.png"
+            src="../src/icons/arrow-left-outline.png"
             alt="arrow-left"
             class="arrow"
             id="arrow-left"
@@ -107,7 +107,7 @@
           <img src="https://picsum.photos/800/400" alt="" class="news-image" />
           <img src="https://picsum.photos/200/100" alt="" class="news-image" />
           <img
-            src="../src/arrow-right-outline.png"
+            src="../src/icons/arrow-right-outline.png"
             alt="arrow-right"
             class="arrow"
             id="arrow-right"
@@ -128,7 +128,7 @@
 
         <div class="breads">
           <div class="bread">
-            <img src="../src/bread/bread1-banana-bread.jpg" alt="Bread 1" />
+            <img src="../src/breads/bread1.jpg" alt="Bread 1" />
             <div class="bread-info">
               <h3>Roti 1</h3>
               <p>Rp 20.000,00</p>
@@ -139,7 +139,7 @@
           </div>
   
           <div class="bread">
-            <img src="../src/bread/bread2-baguette.jpg" alt="Bread 2" />
+            <img src="../src/breads/bread2.jpg" alt="Bread 2" />
             <div class="bread-info">
               <h3>Roti 2</h3>
               <p>Rp 20.000,00</p>
@@ -150,7 +150,7 @@
           </div>
   
           <div class="bread">
-            <img src="../src/bread/bread3-challah.jpg" alt="Bread 3" />
+            <img src="../src/breads/bread3.jpg" alt="Bread 3" />
             <div class="bread-info">
               <h3>Roti 3</h3>
               <p>Rp 20.000,00</p>
@@ -178,13 +178,13 @@
       <p>&copy; 2021 Bakersa</p>
       <div class="socmed">
         <a href="https://www.instagram.com/"
-          ><img src="../src/instagram.png" alt="Instagram"
+          ><img src="../src/icons/instagram.png" alt="Instagram"
         /></a>
         <a href="https://facebook.com"
-          ><img src="../src/facebook.png" alt="Facebook"
+          ><img src="../src/icons/facebook.png" alt="Facebook"
         /></a>
         <a href="https://twitter.com">
-          <img src="../src/twitter.png" alt="Twitter"
+          <img src="../src/icons/twitter.png" alt="Twitter"
         /></a>
       </div>
     </footer>
