--- a/html/classic.html
+++ b/html/classic.html
@@ -86,116 +86,6 @@
     <!-- MAIN -->
     <main>
       <div class="breads">
-        <div class="bread">
-          <img src="../src/breads/bread1.jpg" alt="Bread 1" />
-          <div class="bread-info">
-            <h3>Roti 1</h3>
-            <p>Rp 20.000,00</p>
-          </div>
-          <div class="bread-seemore">
-            <p class="seemore-text">See<br>more</p>
-          </div>
-        </div>
-
-        <div class="bread">
-          <img src="../src/breads/bread2.jpg" alt="Bread 2" />
-          <div class="bread-info">
-            <h3>Roti 2</h3>
-            <p>Rp 20.000,00</p>
-          </div>
-          <div class="bread-seemore">
-            <p class="seemore-text">See<br>more</p>
-          </div>
-        </div>
-
-        <div class="bread">
-          <img src="../src/breads/bread3.jpg" alt="Bread 3" />
-          <div class="bread-info">
-            <h3>Roti 3</h3>
-            <p>Rp 20.000,00</p>
-          </div>
-          <div class="bread-seemore">
-            <p class="seemore-text">See<br>more</p>
-          </div>
-        </div>
-
-        <div class="bread">
-          <img src="../src/breads/bread4.jpg" alt="Bread 4" />
-          <div class="bread-info">
-            <h3>Roti 4</h3>
-            <p>Rp 20.000,00</p>
-          </div>
-          <div class="bread-seemore">
-            <p class="seemore-text">See<br>more</p>
-          </div>
-        </div>
-
-        <div class="bread">
-          <img src="../src/breads/bread5.jpg" alt="Bread 5" />
-          <div class="bread-info">
-            <h3>Roti 5</h3>
-            <p>Rp 20.000,00</p>
-          </div>
-          <div class="bread-seemore">
-            <p class="seemore-text">See<br>more</p>
-          </div>
-        </div>
-
-        <div class="bread">
-          <img src="../src/breads/bread6.jpg" alt="Bread 6" />
-          <div class="bread-info">
-            <h3>Roti 6</h3>
-            <p>Rp 20.000,00</p>
-          </div>
-          <div class="bread-seemore">
-            <p class="seemore-text">See<br>more</p>
-          </div>
-        </div>
-
-        <div class="bread">
-          <img src="../src/breads/bread7.jpg" alt="Bread 7" />
-          <div class="bread-info">
-            <h3>Roti 7</h3>
-            <p>Rp 20.000,00</p>
-          </div>
-          <div class="bread-seemore">
-            <p class="seemore-text">See<br>more</p>
-          </div>
-        </div>
-
-        <div class="bread">
-          <img src="../src/breads/bread8.jpg" alt="Bread 8" />
-          <div class="bread-info">
-            <h3>Roti 8</h3>
-            <p>Rp 20.000,00</p>
-          </div>
-          <div class="bread-seemore">
-            <p class="seemore-text">See<br>more</p>
-          </div>
-        </div>
-
-        <div class="bread">
-          <img src="../src/breads/bread9.jpg" alt="Bread 9" />
-          <div class="bread-info">
-            <h3>Roti 9</h3>
-            <p>Rp 20.000,00</p>
-          </div>
-          <div class="bread-seemore">
-            <p class="seemore-text">See<br>more</p>
-          </div>
-        </div>
-
-        <div class="bread">
-          <img src="../src/breads/bread10.jpg" alt="Bread 10" />
-          <div class="bread-info">
-            <h3>Roti 10</h3>
-            <p>Rp 20.000,00</p>
-          </div>
-          <div class="bread-seemore">
-            <p class="seemore-text">See<br>more</p>
-          </div>
-        </div>
-
       </div>
     </main>
 
@@ -216,5 +106,6 @@
     </footer>
 
     <script src="../js/base.js"></script>
+    <script src="../js/classic.js"></script>
   </body>
 </html>
