--- a/html/detail.html
+++ b/html/detail.html
@@ -74,25 +74,12 @@
     </nav>
 
     <!-- MAIN -->
-    <main>
-        <img src="../src/breads/bread1.jpg" alt="Bread 1" width="100%">
-        <div class="information">
-            <h2>Bread 1</h2>
-            <h3>Rp 10.000,00</h3>
-            <div class="rating">
-                <img src="../src/icons/star.jpg" alt="Star">
-                <img src="../src/icons/star.jpg" alt="Star">
-                <img src="../src/icons/star.jpg" alt="Star">
-                <img src="../src/icons/star.jpg" alt="Star">
-                <img src="../src/icons/star.jpg" alt="Star">
-            </div>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores quam eius enim, fuga debitis quisquam exercitationem deleniti ipsum odit quas eos! At ipsam similique voluptas sed id quae nemo consectetur.</p>
-        </div>
+    <main id="main">
         <div class="order">
             <div class="stocks">
-                <img src="../src/icons/star.jpg" alt="Star">
+                <img src="../src/icons/star.jpg" alt="Star" onclick="decrement()">
                 <p id="stock">0</p>
-                <img src="../src/icons/star.jpg" alt="Star">
+                <img src="../src/icons/star.jpg" alt="Star" onclick="increment()">
             </div>
             <button>Add to Cart</button>
         </div>
@@ -115,5 +102,6 @@
       </footer>
 
       <script src="../js/base.js"></script>
+      <script src="../js/detail.js"></script>
   </body>
 </html>
